// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`status-circle component active status 1`] = `
<div
  className="status-circle status-circle_small status-circle_active"
/>
`;

exports[`status-circle component empty status 1`] = `
<div
  className="status-circle status-circle_small "
/>
`;
